# kongo_history_backend

./: CMakeLists.txt  README.md  kongo_history_backend_fr_BE.ts  main.cpp
backend_tests/: CMakeLists.txt  tst_proto_tests.cpp
src/include/: request.hpp
src/src/: request.cpp
